# bpp-04

./: CMakeLists.txt  README.md
data/: catalog
source/: CMakeLists.txt  main.cpp  program.cpp  program.h
source/core/: catalog.cpp  catalog.h  common.h  order.cpp  order.h  product.h
source/core/lib/: messages.cpp  messages.h
tests/: CMakeLists.txt  integration_tests.cpp  unit_tests.cpp
