cmake_minimum_required(VERSION 3.14)
project(DateTime)

# Define o padr찾o de C++ (por exemplo, C++17)
set(CMAKE_CXX_STANDARD 17)

# Adiciona o diret처rio "source" ao projeto
add_subdirectory(source)

# Adiciona o Google Test como subdiret처rio
add_subdirectory(external/googletest)

# Adiciona o diret처rio "test" ao projeto
add_subdirectory(tests)
